False dependency cycle on particle systems #89875

Closed
opened 2021-07-15 15:21:57 +02:00 by Demeter Dzadik · 5 comments
Member

System Information
Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-15 12:06, hash: 709e443152
Worked: A week or two ago

Short description of error
It seems all particle systems on our production started throwing the following console warning:

OBGEO-elder_sprite_mustache.emitter/PointCache Component/POINT_CACHE_RESET() depends on
OBGEO-elder_sprite_mustache.emitter/Geometry Component/GEOMETRY_EVAL_INIT() via 'Geometry Init -> Point Cache'
OBGEO-elder_sprite_mustache.emitter/PointCache Component/POINT_CACHE_RESET() via 'Point Cache -> Geometry'

Detected 1 dependency cycles

I didn't report it because I thought it would be the same issue as T89734, but I guess it's rather a very similar but different issue :)

Exact steps for others to reproduce the error

  • Open this file, and see the console warning: {F10225077}.
  • Alternatively, just put a particle system on the default cube.

CC @JacquesLucke for a quick fix, since the warning is something to do with geonode components, and the production team is scared by the console warnings :D (although they seem harmless)

**System Information** Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-15 12:06, hash: `709e443152` Worked: A week or two ago **Short description of error** It seems all particle systems on our production started throwing the following console warning: ```Dependency cycle detected: ``` OBGEO-elder_sprite_mustache.emitter/PointCache Component/POINT_CACHE_RESET() depends on OBGEO-elder_sprite_mustache.emitter/Geometry Component/GEOMETRY_EVAL_INIT() via 'Geometry Init -> Point Cache' OBGEO-elder_sprite_mustache.emitter/PointCache Component/POINT_CACHE_RESET() via 'Point Cache -> Geometry' ``` Detected 1 dependency cycles ``` I didn't report it because I thought it would be the same issue as T89734, but I guess it's rather a very similar but different issue :) **Exact steps for others to reproduce the error** - Open this file, and see the console warning: {F10225077}. - Alternatively, just put a particle system on the default cube. CC @JacquesLucke for a quick fix, since the warning is something to do with geonode components, and the production team is scared by the console warnings :D (although they seem harmless)
Author
Member

Added subscribers: @JacquesLucke, @Mets

Added subscribers: @JacquesLucke, @Mets

Added subscribers: @mano-wii, @dr.sybren

Added subscribers: @mano-wii, @dr.sybren

Bisecting shows that this was caused by bfa3dc91b7. @mano-wii would you mind taking a look?

Bisecting shows that this was caused by bfa3dc91b7. @mano-wii would you mind taking a look?
Germano Cavalcante self-assigned this 2021-07-16 13:29:33 +02:00

This issue was referenced by a770faa811

This issue was referenced by a770faa811ee62837eb540b0bd83ca0770f16663

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89875
No description provided.